# hikari-bot

./: .gitignore  README.md  bili_login.py  bot.py  pyproject.toml
.crossnote/: style.less
data/: data.sqlite3
hikari_bot/: .gitignore
hikari_bot/core/: commands.py  constants.py  feature_flags.py  logger.py  whitelist.py
hikari_bot/data/: match_state.json  mycard_user.json  whitelist.json
hikari_bot/deck/: 0dd0@POI.ydk  A无冕者.ydk  Lzyy@ooo.ydk  Milvus丶.ydk  black.ydk  一刀一刀燃烧刀惹啊啊.ydk  公爵.ydk  吉他.ydk  和气生财.ydk  喵子魔法本@神人都市.ydk  园崎探女@K2.ydk  天宮こころ.ydk  安堂なつみ.ydk  小御门让叶.ydk  摩柯降生秽那天残果.ydk  旋转灯球.ydk  水烛@星华@神人都市.ydk  特诺奇蒂特兰.ydk  贝利亚人间体.ydk
hikari_bot/plugins/: base.py  blog.py  cardrush_helper.py  common.py  hikari_help.py  jm.py  jm_downloader.py  mycard_helper.py  mycard_query.py  mycard_subscriber.py  whitelist_manager.py  ygocard_helper.py  ygocard_query.py  ygomatch_helper.py  ygomatch_query.py
hikari_bot/plugins/monitors/: __init__.py  cardrush.py  mensa.py  mycard.py
hikari_bot/plugins/subscriber/: cardrush.py  mycard.py
hikari_bot/plugins/web/: __init__.py
hikari_bot/plugins/web/routes/: __init__.py  cr_upload.py  deck.py  sms.py  uptime_webhook.py
hikari_bot/plugins/web/templates/: deck.html
hikari_bot/resources/: help.md  option.yml
hikari_bot/services/: bilibili.py  mycard.py  price.py  ygocard.py  ygodeck.py  ygomatch.py
hikari_bot/utils/: cardrush.py  constants.py  logger.py  mycard.py  whitelist.py  ygocard.py  ygodeck.py  ygomatch.py
scripts/: bili_login.py  cr_scraper.py
